Add gateway service, mise a jours du nginx pour index.html et les routes, ajout du service auth

--- a/srcs/nginx/conf.d/default.conf
+++ b/srcs/nginx/conf.d/default.conf
@@ -1,12 +1,9 @@
-upstream api_backend {
-    # Use a dummy unreachable host so Nginx starts even if API isn't up yet
-    server 127.0.0.1:65535;  
-    keepalive 32;
-}
-
 server {
     listen 80;
     server_name localhost;
+
+    # Docker internal DNS resolver
+    resolver 127.0.0.11 valid=5s;
 
     root /usr/share/nginx/html;
     index index.html;
@@ -19,12 +16,11 @@ server {
     }
 
     # Proxy API requests
-    location /api {
-		resolver 127.0.0.11 valid=5s;  # Docker internal DNS
+    location /api/ {
         set $api_host "api-gateway";   # container name
         set $api_port "3000";
 
-        # proxy_pass http://api_backend:3000;
+        # Rewrite /api/xxx -> /api/xxx (garde le chemin complet)
         proxy_pass http://$api_host:$api_port;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
@@ -34,6 +30,29 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
+        proxy_pass_request_body on;
+        proxy_pass_request_headers on;
+		proxy_cookie_path / "/";
+    }
+
+	# Proxy gateway root (routes defined on / in gateway) under /gateway
+    location /gateway/ {
+        set $api_host "api-gateway";
+        set $api_port "3000";
+
+        # Rewrite /gateway/xxx -> /xxx et transmet tout
+        rewrite ^/gateway/(.*) /$1 break;
+        proxy_pass http://$api_host:$api_port;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Connection "";
+        proxy_pass_request_body on;
+        proxy_pass_request_headers on;
+        proxy_redirect off;
+        proxy_cookie_path / "/";
     }
 
     # Serve static files directly
