--- a/.gitignore
+++ b/.gitignore
@@ -70,6 +70,15 @@ web_modules/
 .env.*
 !.env.example
 
+# Docker volumes and data
+data/
+volumes/
+
+# SQLite databases
+*.db
+*.sqlite
+*.sqlite3
+
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 .parcel-cache
