--- a/srcs/nginx/Dockerfile
+++ b/srcs/nginx/Dockerfile
@@ -1,13 +1,14 @@
-FROM node:18-alpine AS builder
-WORKDIR /build
-COPY html/index.ts html/tsconfig.json ./
-RUN npm install -g typescript && tsc index.ts --outFile app.js --target ES2017 --lib ES2017,DOM
-
 FROM nginx:alpine
-RUN rm /etc/nginx/conf.d/default.conf
+
+# Installer wget pour health check
+RUN apk add --no-cache wget
+
+# Supprime la conf par défaut si besoin
+RUN rm /etc/nginx/conf.d/default.conf || true
+
 COPY nginx.conf /etc/nginx/nginx.conf
-COPY conf.d/ /etc/nginx/conf.d/
-COPY html/index.html /usr/share/nginx/html/
-COPY --from=builder /build/app.js /usr/share/nginx/html/
+COPY conf.d/default.conf /etc/nginx/conf.d/default.conf
+COPY ./html /usr/share/nginx/html
+
 EXPOSE 80 443
 CMD ["nginx", "-g", "daemon off;"]
