--- a/.gitignore
+++ b/.gitignore
@@ -104,6 +104,10 @@ dist
 # vitepress cache directory
 **/.vitepress/cache
 
+# Mounted volumes
+volumes/
+data/
+
 # Docusaurus cache and generated files
 .docusaurus
 
