--- a/srcs/api/package.json
+++ b/srcs/api/package.json
@@ -17,8 +17,12 @@
   "license": "ISC",
   "dependencies": {
     "@fastify/cors": "^8.4.1",
-    "fastify": "^4.24.3",
-    "ioredis": "^5.8.2"
+    "@fastify/http-proxy": "^11.3.0",
+    "@fastify/websocket": "^5.0.1",
+    "fastify": "^5.6.2",
+    "http-proxy": "^1.18.1",
+    "ioredis": "^5.8.2",
+    "websocket": "^1.0.35"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
