--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -53,6 +53,19 @@ services:
       - app-network
     restart: unless-stopped
 
+  game-service:
+    build:
+      context: ./game
+      dockerfile: Dockerfile
+    container_name: game-service 
+    environment:
+      - NODE_ENV=production
+      - REDIS_URL=redis://redis-broker:6379
+    networks:
+      - app-network
+    restart: unless-stopped
+
+
 networks:
   app-network:
     driver: bridge
