--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -9,6 +9,11 @@ events {
     multi_accept on;
 }
 
+# map $http_upgrade $connection_upgrade {
+#     default upgrade;
+#     '' close;
+# }
+
 http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
