Passer de /gateway a /public

--- a/srcs/nginx/conf.d/default.conf
+++ b/srcs/nginx/conf.d/default.conf
@@ -37,12 +37,12 @@ server {
     }
 
 	# Proxy gateway root (routes defined on / in gateway) under /gateway
-    location /gateway/ {
+    location /public/ {
         set $api_host "api-gateway";
         set $api_port "3000";
 
-        # Rewrite /gateway/xxx -> /xxx et transmet tout
-        rewrite ^/gateway/(.*) /$1 break;
+        # Rewrite /public/xxx -> /xxx et transmet tout
+        rewrite ^/public/(.*) /$1 break;
         proxy_pass http://$api_host:$api_port;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
