--- a/srcs/users/package.json
+++ b/srcs/users/package.json
@@ -8,12 +8,17 @@
   "main": "index.ts",
   "scripts": {
     "test": "test",
-    "prepare": "husky"
+    "prepare": "husky",
+    "lint": "eslint",
+    "lint:fix": "eslint --fix",
+    "format": "prettier --write ."
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@types/better-sqlite3": "^7.6.13",
     "@types/jest": "^30.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.47.0",
+    "@typescript-eslint/parser": "^8.47.0",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-node": "^11.1.0",
@@ -28,6 +33,7 @@
   },
   "dependencies": {
     "better-sqlite3": "^12.4.1",
+    "envalid": "^8.1.1",
     "fastify": "^5.6.2",
     "zod": "^4.1.12"
   }
