--- a/srcs/blockchain/package.json
+++ b/srcs/blockchain/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.13",
     "@types/ejs": "^3.1.5",
     "@types/node": "^24.10.1",
     "typescript": "^5.9.3"
