[feat] ajout de la gestion des utilisateurs admin et invité, création des routes associées et mise à jour de l'interface utilisateur

--- a/srcs/.env.example
+++ b/srcs/.env.example
@@ -12,3 +12,11 @@ LOG_LEVEL=warn
 
 # Node environment (production, development, etc.)
 NODE_ENV=production
+
+ADMIN_USERNAME=admin
+ADMIN_EMAIL=admin@transcendence.local
+ADMIN_PASSWORD=Admin123!
+
+INVITE_USERNAME=invite
+INVITE_EMAIL=invite@transcendence.local
+INVITE_PASSWORD=Invite123!
