--- a/srcs/blockchain/package.json
+++ b/srcs/blockchain/package.json
@@ -3,6 +3,8 @@
     "@types/better-sqlite3": "^7.6.13",
     "@types/ejs": "^3.1.5",
     "@types/node": "^24.10.1",
+    "prettier": "^3.6.2",
+    "prettier-plugin-ejs": "^1.0.3",
     "typescript": "^5.9.3"
   },
   "name": "blockchain",
