--- a/srcs/.env.example
+++ b/srcs/.env.example
@@ -22,4 +22,5 @@ GAME_SERVICE_PORT=3003
 
 # SERVICE UM
 UM_SERVICE_PORT=3004
-UM_DB_PATH=./data/um
+UM_DB_PATH="./data/um.db"
+UM_DB_URL="file:./data/um.db"
