--- a/srcs/users/package.json
+++ b/srcs/users/package.json
@@ -33,8 +33,10 @@
     "typescript-eslint": "^8.47.0"
   },
   "dependencies": {
+    "@prisma/adapter-better-sqlite3": "^7.0.0",
     "@prisma/client": "^7.0.0",
     "better-sqlite3": "^12.4.1",
+    "dotenv": "^17.2.3",
     "envalid": "^8.1.1",
     "fastify": "^5.6.2",
     "prisma": "^6.19.0",
