--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -72,13 +72,19 @@ services:
       context: ./game
       dockerfile: Dockerfile
     container_name: game-service 
+    volumes:
+      - ./game/src:/app/src
+      - /app/node_modules
+      - /app/dist  # Exclude compiled files
     expose:
       - "3003"
     environment:
-      - NODE_ENV=production
+      - NODE_ENV=development
+      # - NODE_ENV=production
       - REDIS_URL=redis://redis-broker:6379
     networks:
       - app-network
+    command: npm run dev
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3003/health"]
@@ -87,6 +93,9 @@ services:
       retries: 3
       start_period: 10s
 
+networks:
+  app-network:
+    driver: bridge
   # Redis message broker
   # redis-broker:
   #   build:
@@ -112,6 +121,3 @@ services:
   #     - app-network
   #   restart: unless-stopped
 
-networks:
-  app-network:
-    driver: bridge
