[wip] testing controller

--- a/srcs/users/tsconfig.json
+++ b/srcs/users/tsconfig.json
@@ -1,34 +1,30 @@
 {
-    "compilerOptions": {
-        "target": "es2022",
-        "types": ["node", "jest", "better-sqlite3"],
-        "module": "nodenext",
-        "moduleResolution": "nodenext",
-        "outDir": "dist",
-        "rootDir": "src",
-        "baseUrl": "./src",
-        "strict": true,
-        "esModuleInterop": true,
-        "skipLibCheck": true,
-        "resolveJsonModule": true,
-        "allowSyntheticDefaultImports": true,
-        "forceConsistentCasingInFileNames": true,
-        "noImplicitAny": true,
-        "noImplicitReturns": true,
-        "noImplicitThis": true,
-        "noUnusedLocals": true,
-        "noUnusedParameters": true, // unused function params
-        "noFallthroughCasesInSwitch": true,
-        "noImplicitOverride": true,
-        "noPropertyAccessFromIndexSignature": true,
-        "exactOptionalPropertyTypes": true,
-        "sourceMap": true, // debug
-        "inlineSources": true
-    },
-    "include": [
-        "src/**/*"
-, "prisma.config.ts", "prisma.config.ts"    ],
-    "exclude": [
-        "src/**/*.spec.ts"
-    ]
+  "compilerOptions": {
+    "target": "es2022",
+    "types": ["node", "jest", "better-sqlite3"],
+    "module": "nodenext",
+    "moduleResolution": "nodenext",
+    "outDir": "dist",
+    "rootDir": "src",
+    "baseUrl": "./src",
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true,
+    "forceConsistentCasingInFileNames": true,
+    "noImplicitAny": true,
+    "noImplicitReturns": true,
+    "noImplicitThis": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true, // unused function params
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitOverride": true,
+    "noPropertyAccessFromIndexSignature": true,
+    "exactOptionalPropertyTypes": true,
+    "sourceMap": true, // debug
+    "inlineSources": true
+  },
+  "include": ["src/**/*", "prisma.config.ts", "prisma.config.ts"],
+  "exclude": ["src/**/*.spec.ts"]
 }
