--- a/srcs/users/package.json
+++ b/srcs/users/package.json
@@ -7,19 +7,23 @@
   "type": "module",
   "main": "index.ts",
   "scripts": {
-    "test": "test",
+    "test": "NODE_OPTIONS='--experimental-vm-modules' jest",
+    "test:watch": "NODE_OPTIONS='--experimental-vm-modules' jest --watch",
+    "test:coverage": "NODE_OPTIONS='--experimental-vm-modules' jest --coverage",
     "prepare": "husky",
     "lint": "eslint",
     "lint:fix": "eslint --fix",
     "format": "prettier --write ."
   },
   "devDependencies": {
+    "@babel/core": "^7.28.5",
     "@eslint/js": "^9.39.1",
     "@types/better-sqlite3": "^7.6.13",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.10.1",
     "@typescript-eslint/eslint-plugin": "^8.47.0",
     "@typescript-eslint/parser": "^8.47.0",
+    "babel-jest": "^30.2.0",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-node": "^11.1.0",
