--- a/srcs/users/package.json
+++ b/srcs/users/package.json
@@ -7,35 +7,38 @@
   "type": "module",
   "main": "index.ts",
   "scripts": {
-    "test": "NODE_OPTIONS='--experimental-vm-modules' jest",
-    "test:watch": "NODE_OPTIONS='--experimental-vm-modules' jest --watch",
-    "test:coverage": "NODE_OPTIONS='--experimental-vm-modules' jest --coverage",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "test": "vitest run",
+    "test:watch": "vitest run --watch",
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui",
     "prepare": "husky",
     "lint": "eslint",
     "lint:fix": "eslint --fix",
     "format": "prettier --write ."
   },
   "devDependencies": {
-    "@babel/core": "^7.28.5",
     "@eslint/js": "^9.39.1",
     "@types/better-sqlite3": "^7.6.13",
-    "@types/jest": "^30.0.0",
     "@types/node": "^24.10.1",
     "@typescript-eslint/eslint-plugin": "^8.47.0",
     "@typescript-eslint/parser": "^8.47.0",
-    "babel-jest": "^30.2.0",
+    "@vitest/coverage-v8": "^1.0.0",
+    "@vitest/ui": "^1.0.0",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-node": "^11.1.0",
     "globals": "^16.5.0",
     "husky": "^9.1.7",
-    "jest": "^30.2.0",
+    "lint-staged": "^16.2.7",
     "prettier": "^3.6.2",
     "prisma": "^7.0.1",
-    "ts-jest": "^29.4.5",
-    "ts-node": "^10.9.2",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.47.0"
+    "typescript-eslint": "^8.47.0",
+    "vite": "^5.0.0",
+    "vitest": "^1.0.0"
   },
   "dependencies": {
     "@prisma/adapter-better-sqlite3": "^7.0.0",
