chore: env - service specific .env - use env var in docker-compose

--- a/srcs/.env.example
+++ b/srcs/.env.example
@@ -1,7 +1,6 @@
 # Environment variables for docker-compose
 # Copy this file to .env
 
-
 ##### GLOBAL
 
 HOST_VOLUME_PATH=data
@@ -9,14 +8,9 @@ HOST_VOLUME_PATH=data
 # Node environment (production | development)
 NODE_ENV=production
 
-# JWT Secret Key (CHANGE THIS IN PRODUCTION!)
-JWT_SECRET=supersecretkey
-
 # LOGGING (debug | info | warn | error)
 LOG_LEVEL=warn 
 LOG_ENABLED=true
-
-
 
 ##### SERVICES
 
@@ -48,11 +42,4 @@ BK_SERVICE_NAME=blockchain-service
 # SERVICE REDIS
 REDIS_SERVICE_PORT=6379
 REDIS_SERVICE_NAME=redis-broker
-
-ADMIN_USERNAME=admin
-ADMIN_EMAIL=admin@transcendence.local
-ADMIN_PASSWORD=Admin123!
-
-INVITE_USERNAME=invite
-INVITE_EMAIL=invite@transcendence.local
-INVITE_PASSWORD=Invite123!
+REDIS_URL=redis://redis-broker:6379
