--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,3 +1,9 @@
+x-healthcheck-template: &healthcheck-template
+  interval: 10s
+  timeout: 5s
+  retries: 3
+  start_period: 10s
+
 services:
   # Nginx reverse proxy
   nginx-proxy:
@@ -17,11 +23,8 @@ services:
       api-gateway:
         condition: service_started
     healthcheck:
+      <<: *healthcheck-template
       test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost/health"]
-      interval: 10s
-      timeout: 5s
-      retries: 3
-      start_period: 5s
 
   # Main Fastify API
   api-gateway:
@@ -52,6 +55,7 @@ services:
       - "${AUTH_SERVICE_PORT}"
     env_file:
       - path: ./.env
+      - path: ./.env.auth
     environment:
       - AUTH_DB_PATH=/data/auth.db                # SQLite database path inside container - TODO .env.auth ?
       - JWT_SECRET=${JWT_SECRET:-supersecretkey}
@@ -61,11 +65,8 @@ services:
       - app-network
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3001/health"]
-      interval: 10s
-      timeout: 5s
-      retries: 3
-      start_period: 10s
+      <<: *healthcheck-template
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:${AUTH_SERVICE_PORT}/health"]
 
   # Blockchain service
   blockchain-service:
@@ -77,20 +78,15 @@ services:
       - "${BK_SERVICE_PORT}"
     env_file:
       - path: ./.env
-    environment:
-      - BLOCK_DB_PATH=/data/blockchain.db         # SQLite database path inside container - TODO .env.bk
-      - REDIS_URL="redis://${REDIS_SERVICE_NAME}:${REDIS_SERVICE_PORT}"
+      - path: ./.env.blockchain
     volumes:
       - data:/data
     networks:
       - app-network
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3005/health"]
-      interval: 10s
-      timeout: 5s
-      retries: 3
-      start_period: 10s
+      <<: *healthcheck-template
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:${BK_SERVICE_PORT}/health"]
 
   game-service:
     build:
@@ -101,48 +97,43 @@ services:
       - "${GAME_SERVICE_PORT}"
     env_file:
       - path: ./.env
-    environment:
-      - REDIS_URL="redis://${REDIS_SERVICE_NAME}:${REDIS_SERVICE_PORT}"
+      - path: ./.env.game
     networks:
       - app-network
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3003/health"]
-      interval: 10s
-      timeout: 5s
-      retries: 3
-      start_period: 10s
+      <<: *healthcheck-template
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:${GAME_SERVICE_PORT}/health"]
   
   redis-broker:
     build:
       context: ./redis
       dockerfile: Dockerfile
     container_name: ${REDIS_SERVICE_NAME}
+    expose:
+      - "${REDIS_SERVICE_PORT}"
     networks:
       - app-network
     restart: unless-stopped
 
   user-service:
     build:
-      context: ./users
+      context: ./${UM_SERVICE_DIR}
       dockerfile: Dockerfile
     container_name: ${UM_SERVICE_NAME}
     expose:
       - "${UM_SERVICE_PORT}"
     env_file:
       - path: ./.env
-      - path: ./users/.env.um
+      - path: ./.env.um
     volumes:
       - ${HOST_VOLUME_PATH}:/data
     networks:
       - app-network
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3002/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 10s
+      <<: *healthcheck-template
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:${UM_SERVICE_PORT}/health"]
 
 networks:
   app-network:
