--- a/srcs/auth/package.json
+++ b/srcs/auth/package.json
@@ -26,6 +26,7 @@
     "fastify": "^5.6.2",
     "pino": "^10.1.0",
     "pino-pretty": "^13.1.3",
+    "pino-std-serializers": "^7.0.0",
     "zod": "^3.25.2"
   }
 }
