--- a/srcs/users/package.json
+++ b/srcs/users/package.json
@@ -36,8 +36,8 @@
     "typescript-eslint": "^8.47.0",
     "vite": "^5.0.0",
     "vitest": "^1.0.0"
-},
-"dependencies": {
+  },
+  "dependencies": {
     "@prisma/adapter-better-sqlite3": "^7.0.0",
     "@prisma/client": "^7.0.1",
     "better-sqlite3": "^12.4.1",
@@ -46,6 +46,7 @@
     "fastify": "^5.6.2",
     "pino": "^10.1.0",
     "pino-pretty": "^13.1.3",
+    "pino-std-serializers": "^7.0.0",
     "zod": "^4.1.13"
   }
 }
