fix: integration POST auth/register and POST users - fix db url + passing prisma info in dockerfile - fix zod schema to validate incoming request in um

--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -126,7 +126,7 @@ services:
       - path: ./.env
       - path: ./.env.um
     volumes:
-      - ${HOST_VOLUME_PATH}:/data
+      - data:/data
     networks:
       - app-network
     restart: unless-stopped
