update : add hot reload in blockchain update : dev-docker-compose.yml

--- a/srcs/blockchain/tsconfig.json
+++ b/srcs/blockchain/tsconfig.json
@@ -12,6 +12,6 @@
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true
   },
-
-  "include": ["src"]
+  "include": ["src/**/*.ts"],
+  "exclude": ["src/SmartContract/**"]
 }
