--- a/srcs/blockchain/package.json
+++ b/srcs/blockchain/package.json
@@ -7,18 +7,17 @@
     "nodemon": "^3.1.11",
     "prettier": "^3.6.2",
     "prettier-plugin-ejs": "^1.0.3",
+    "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   },
   "name": "blockchain",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./dist/server.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "devold": "concurrently \"tsc -p tsconfig.json -w\" \"nodemon --watch dist --exec node dist/server.js\"",
-    "dev": "concurrently -k -n TSC,NODE -c yellow,cyan \"tsc -w\" \"nodemon dist/server.js\"",
-    "devmac": "tsc -w & node --watch dist/server.js",
+    "dev": "nodemon",
     "build": "tsc -p tsconfig.json",
     "start": "tsc -p tsconfig.json && node dist/server.js"
   },
