--- a/srcs/dev-docker-compose.yml
+++ b/srcs/dev-docker-compose.yml
@@ -6,7 +6,7 @@ services:
     build:
       context: ./nginx
       dockerfile: Dockerfile.dev
-    container_name: nginx-proxy-dev
+    container_name: nginx-proxy
     ports:
       - '8080:80'
       - '4430:443'
@@ -72,32 +72,35 @@ services:
   blockchain-service:
     build:
       context: ./blockchain
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.dev
     container_name: blockchain-service
     expose:
       - '3005'
     environment:
-      - NODE_ENV=production
+      - NODE_ENV=development
       - BLOCK_DB_PATH=/data/blockchain.db
       - REDIS_URL=redis://redis-broker:6379
-      - LOG_LEVEL=${LOG_LEVEL:-info}
+      - LOG_LEVEL=${LOG_LEVEL:-debug}
     volumes:
       - data:/data
+      - ./blockchain/src:/app/src
+      - ./blockchain/tsconfig.json:/app/tsconfig.json
+      - ./blockchain/nodemon.json:/app/nodemon.json
     networks:
       - app-network
-    restart: unless-stopped
+    restart: "no"
     healthcheck:
       test: ['CMD', 'wget', '--no-verbose', '--tries=1', '--spider', 'http://localhost:3005/health']
       interval: 10s
       timeout: 5s
       retries: 3
-      start_period: 10s
+      start_period: 15s
 
   game-service:
     build:
       context: ./game
       dockerfile: Dockerfile
-    container_name: game-service-dev
+    container_name: game-service
     expose:
       - '3003'
     environment:
@@ -121,3 +124,4 @@ networks:
 
 volumes:
   data:
+    driver: local
