--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -22,7 +22,16 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - uses: actions/checkout@v4
-
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y curl make
       # Runs a set of commands using the runners shell
+      # Compilation
+      - name: Build project
+        run: make
+      - name: HTTP health check
+        run: |
+          curl --fail --retry 10 --retry-delay 2 http://localhost:8080
       - name: Run a multi-line script
         run: echo "build to do"
