chore: install react deps + adapt docker compose and env - adapt dev-docker-compose (env, template, other services) - mount upload volume (for avatars) - envalid + react router dom + types - adapt tsconfig for vite - nginx conf fallback on index (spa) - export appenv with envalid

--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     networks:
       - app-network
     volumes:
-      - ${HOST_VOLUME_PATH}:/usr/share/nginx/html/uploads:ro
+      - uploads:/usr/share/nginx/html/uploads
     restart: unless-stopped
     depends_on:
       api-gateway:
@@ -142,6 +142,12 @@ volumes:
   data:
     driver: local
     driver_opts:
-      device: ${HOST_VOLUME_PATH}
+      device: ${HOST_VOLUME_PATH}/data
+      o: bind
+      type: none
+  uploads:
+    driver: local
+    driver_opts:
+      device: ${HOST_VOLUME_PATH}/uploads
       o: bind
       type: none
