--- a/srcs/nginx/conf.d/default.conf
+++ b/srcs/nginx/conf.d/default.conf
@@ -27,118 +27,77 @@ server {
         try_files $uri =404;
     }
 
-    # Proxy API requests
-		#   location /api/ {
-		#       set $api_host "api-gateway";   # container name
-		#       set $api_port "3000";
-		#
-		#       # Rewrite /api/xxx -> /api/xxx (garde le chemin complet)
-		#       proxy_pass http://$api_host:$api_port;
-		#       proxy_http_version 1.1;
-		#       # proxy_set_header Upgrade $http_upgrade;
-		#       # proxy_set_header Connection 'upgrade';
-		#       proxy_set_header Connection "";
-		#       proxy_set_header Host $host;
-		#       proxy_set_header X-Real-IP $remote_addr;
-		#       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-		#       proxy_set_header X-Forwarded-Proto $scheme;
-		#       proxy_set_header Origin $scheme://$host;
-		#       proxy_cache_bypass $http_upgrade;
-		#       proxy_pass_request_body on;
-		#       proxy_pass_request_headers on;
-		# proxy_cookie_path / "/";
-		#   }
     location /api/ {
-        # Backend
-        proxy_pass http://api-gateway:3000;
+      # Backend
+      proxy_pass http://api-gateway:3000;
+      proxy_http_version 1.1;
 
-        proxy_http_version 1.1;
+      # Correct headers
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      proxy_set_header Origin $scheme://$host;
 
-        # Correct headers
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header Origin $scheme://$host;
+      # SECURITY: Supprimer les headers forgés du client
+      proxy_set_header x-user-name "";
+      proxy_set_header x-user-id "";
 
-        # SECURITY: Supprimer les headers forgés du client
-        proxy_set_header x-user-name "";
-        proxy_set_header x-user-id "";
+      # Especially important: disable websocket upgrade here
+      proxy_set_header Upgrade "";
+      proxy_set_header Connection "";
 
-        # Especially important: disable websocket upgrade here
-        proxy_set_header Upgrade "";
-        proxy_set_header Connection "";
-
-        # Forward body & headers
-        proxy_pass_request_body on;
-        proxy_pass_request_headers on;
+      # Forward body & headers
+      proxy_pass_request_body on;
+      proxy_pass_request_headers on;
     }
 	
     location /api/game/ {
-    proxy_pass http://api-gateway:3000;
+      proxy_pass http://api-gateway:3000;
 
-    proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection "upgrade";
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
 
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-    proxy_set_header Origin $scheme://$host;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      proxy_set_header Origin $scheme://$host;
 
-    # SECURITY: Supprimer les headers forgés du client
-    proxy_set_header x-user-name "";
-    proxy_set_header x-user-id "";
+      # SECURITY: Supprimer les headers forgés du client
+      proxy_set_header x-user-name "";
+      proxy_set_header x-user-id "";
 
-    proxy_read_timeout 3600;
-    proxy_send_timeout 3600;
-}
+      proxy_read_timeout 3600;
+      proxy_send_timeout 3600;
+    }
 
 
-	# Proxy gateway root (routes defined on / in gateway) under /gateway
-    # location /public/ {
-    #     set $api_host "api-gateway";
-    #     set $api_port "3000";
-    #
-    #     # Rewrite /public/xxx -> /xxx et transmet tout
-    #     rewrite ^/public/(.*) /$1 break;
-    #     proxy_pass http://$api_host:$api_port;
-    #     proxy_http_version 1.1;
-    #     proxy_set_header Host $host;
-    #     proxy_set_header X-Real-IP $remote_addr;
-    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #     proxy_set_header X-Forwarded-Proto $scheme;
-    #     proxy_set_header Connection "";
-    #     proxy_pass_request_body on;
-    #     proxy_pass_request_headers on;
-    #     proxy_set_header Origin $scheme://$host;
-    #     proxy_redirect off;
-    #     proxy_cookie_path / "/";
-    # }
-        location /public/ {
-        rewrite ^/public/(.*)$ /$1 break;
-        proxy_pass http://api-gateway:3000;
-        proxy_http_version 1.1;
+	      # Proxy gateway root (routes defined on / in gateway) under /gateway
+    location /public/ {
+      rewrite ^/public/(.*)$ /$1 break;
+      proxy_pass http://api-gateway:3000;
+      proxy_http_version 1.1;
 
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header Origin $scheme://$host;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      proxy_set_header Origin $scheme://$host;
 
-        # SECURITY: Supprimer les headers forgés du client
-        proxy_set_header x-user-name "";
-        proxy_set_header x-user-id "";
+      # SECURITY: Supprimer les headers forgés du client
+      proxy_set_header x-user-name "";
+      proxy_set_header x-user-id "";
 
-        proxy_set_header Upgrade "";
-        proxy_set_header Connection "";
+      proxy_set_header Upgrade "";
+      proxy_set_header Connection "";
     }
 
 
     # Serve static files directly
     location / {
-        try_files $uri $uri/ =404;
+        try_files $uri $uri/ /index.html;
     }
 
     # Ensure proper MIME types
