--- a/srcs/nginx/package.json
+++ b/srcs/nginx/package.json
@@ -1,4 +1,9 @@
 {
+  "name": "proxy-service",
+  "version": "1.0.0",
+  "description": "user management",
+  "license": "GPL-3.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -7,6 +12,9 @@
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^5.1.2",
     "concurrently": "^8.0.0",
     "nodemon": "^3.0.0",
@@ -16,7 +24,9 @@
     "webpack": "^5.103.0"
   },
   "dependencies": {
+    "envalid": "^8.1.1",
     "react": "^19.2.3",
-    "react-dom": "^19.2.3"
+    "react-dom": "^19.2.3",
+    "react-router-dom": "^7.11.0"
   }
 }
