--- a/srcs/nginx/package.json
+++ b/srcs/nginx/package.json
@@ -27,6 +27,7 @@
     "envalid": "^8.1.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "react-router-dom": "^7.11.0"
+    "react-router-dom": "^7.11.0",
+    "zod": "^4.2.1"
   }
 }
