--- a/srcs/nginx/package.json
+++ b/srcs/nginx/package.json
@@ -11,14 +11,17 @@
     "start": "node dist/index.js"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^20.0.0",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^5.1.2",
+    "autoprefixer": "^10.4.23",
     "concurrently": "^8.0.0",
     "nodemon": "^3.0.0",
-    "tailwindcss": "^4.1.17",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5.0.0",
     "vite": "^7.3.0",
     "webpack": "^5.103.0"
