--- a/srcs/gateway/Dockerfile
+++ b/srcs/gateway/Dockerfile
@@ -1,37 +1,72 @@
 # ==========================
 # Stage 1 — Builder
 # ==========================
+
+# ==========================
+# Paths should be written from root
+# ==========================
+
 FROM node:20-alpine AS builder
 
 WORKDIR /app
 
-# Installer les deps (dev + prod)
+# Copy root package files for workspace resolution
 COPY package.json package-lock.json ./
-RUN npm install
 
-# Copier le code source
-COPY tsconfig.json ./
-COPY src ./src
+# Copy shared core package files
+COPY srcs/shared/core/package.json ./srcs/shared/core/package.json
+COPY srcs/shared/core/tsconfig.json ./srcs/shared/core/tsconfig.json
 
-# Compiler TypeScript → dist/
+# Copy service package files
+COPY srcs/gateway/package.json ./srcs/gateway/package.json
+COPY srcs/gateway/package-lock.json ./srcs/gateway/package-lock.json
+
+# Install dependencies for workspace (this links @transcendence/core)
+RUN npm ci
+
+# Copy and build shared core first
+COPY srcs/shared/core/src ./srcs/shared/core/src
+RUN npm run build --workspace srcs/shared/core
+
+# Copy service source files
+COPY srcs/gateway/tsconfig.json ./srcs/gateway/tsconfig.json
+COPY srcs/gateway/src ./srcs/gateway/src
+
+WORKDIR /app/srcs/gateway
+
+# Build → dist/
 RUN npm run build
-
 
 # ==========================
 # Stage 2 — Production
 # ==========================
+
 FROM node:20-alpine AS runner
 
+# Keep the same workspace root as builder
 WORKDIR /app
 
-# Copier uniquement package.json pour installer deps prod
-COPY package.json package-lock.json ./
+# Copy root workspace files
+COPY --from=builder /app/package.json /app/package-lock.json ./
+
+# Copy shared core (built artifacts + package.json for workspace resolution)
+COPY --from=builder /app/srcs/shared/core/package.json ./srcs/shared/core/package.json
+COPY --from=builder /app/srcs/shared/core/dist ./srcs/shared/core/dist
+
+# Copy service package files
+COPY --from=builder /app/srcs/gateway/package.json ./srcs/gateway/package.json
+COPY --from=builder /app/srcs/gateway/package-lock.json ./srcs/gateway/package-lock.json
+
+# Copy built artifacts
+COPY --from=builder /app/srcs/gateway/dist ./srcs/gateway/dist
+
+# Skip husky in production
+ENV HUSKY=0
 
 # Installer uniquement les deps nécessaires en runtime
-RUN npm install --omit=dev
+RUN npm ci --omit=dev
 
-# Copier build compilé depuis le builder
-COPY --from=builder /app/dist ./dist
+WORKDIR /app/srcs/gateway
 
 EXPOSE 3000
 
