--- a/srcs/gateway/package.json
+++ b/srcs/gateway/package.json
@@ -1,12 +1,22 @@
 {
-  "name": "transcendance-gateway",
+  "name": "@transcendence/gateway",
   "version": "1.0.0",
+  "main": "dist/index.js",
+  "description": "api gateway",
   "type": "module",
   "private": true,
   "scripts": {
     "dev": "concurrently \"tsc -p tsconfig.json -w\" \"nodemon --watch dist --exec node dist/index.js\"",
     "build": "tsc -p tsconfig.json",
     "start": "node dist/index.js"
+  },
+  "devDependencies": {
+    "@types/node": "^24.10.1",
+    "@types/ws": "^8.18.1",
+    "concurrently": "^9.2.1",
+    "nodemon": "^3.1.11",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
   },
   "dependencies": {
     "@fastify/cookie": "^11.0.2",
@@ -17,16 +27,9 @@
     "@fastify/swagger": "^9.6.1",
     "@fastify/swagger-ui": "^5.2.3",
     "@fastify/websocket": "^11.0.0",
+    "@transcendence/core": "1.0.0",
     "fastify": "^5.6.2",
     "fastify-type-provider-zod": "^6.1.0",
     "zod": "^4.2.1"
-  },
-  "devDependencies": {
-    "@types/node": "^24.10.1",
-    "@types/ws": "^8.18.1",
-    "concurrently": "^9.2.1",
-    "nodemon": "^3.1.11",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
   }
 }
