--- a/srcs/.env.blockchain.example
+++ b/srcs/.env.blockchain.example
@@ -1,1 +1,6 @@
 BLOCK_DB_PATH=/data/blockchain.db
+AVALANCHE_RPC_URL=http://localhost:8545
+GAME_STORAGE_ADDRESS=0x...
+BLOCKCHAIN_PRIVATE_KEY=0x...
+BLOCKCHAIN_READY=false
+
