--- a/srcs/blockchain/package.json
+++ b/srcs/blockchain/package.json
@@ -30,6 +30,7 @@
     "@fastify/view": "^11.1.1",
     "better-sqlite3": "^12.4.1",
     "ejs": "^3.1.10",
+    "ethers": "^6.16.0",
     "fastify": "^5.6.2"
   }
 }
