feat: documentation on /users/doc
BUT calls auth->um and data consistency is buggy
nominal case fails (commented)

--- a/srcs/nginx/conf.d/default.conf
+++ b/srcs/nginx/conf.d/default.conf
@@ -16,6 +16,24 @@ server {
         add_header Content-Type text/plain;
     }
 
+    # Users service Swagger UI
+    # ^~ to prevent regex locations from serving static assets for this route
+    location ^~ /users/doc/ {
+        proxy_pass http://user-service:3002/doc/;  # container name + port
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        # Remove any forged user headers
+        proxy_set_header x-user-name "";
+        proxy_set_header x-user-id "";
+
+        proxy_set_header Upgrade "";
+        proxy_set_header Connection "";
+    }
+
     location /uploads/ {
         alias /usr/share/nginx/html/uploads;
         try_files $uri =404;
