style(UM): prettier - add tsx and css to prettier targets - add global format:users script - remove unused schemas - format

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "main": "index.js",
   "directories": {
     "doc": "docs"
-  },  
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "husky || true",
@@ -23,6 +23,7 @@
     "build:blockchain": "npm run build --workspace srcs/blockchain",
     "build:nginx": "npm run build --workspace srcs/nginx",
     "build:all": "npm run build:core && npm run build:users && npm run build:auth && npm run build:gateway && npm run build:game && npm run build:blockchain && npm run build:nginx",
+    "format:users": "npm run format --workspace srcs/users",
     "clean": "rm -rf srcs/*/dist srcs/shared/core/dist node_modules srcs/*/node_modules"
   },
   "repository": {
@@ -44,7 +45,7 @@
     "prettier": "^3.7.4"
   },
   "lint-staged": {
-    "**/*.{ts,js,json,md}": [
+    "**/*.{ts,tsx,js,css,json,md}": [
       "prettier --write"
     ]
   },
