--- a/package.json
+++ b/package.json
@@ -36,8 +36,13 @@
   "devDependencies": {
     "@commitlint/cli": "^20.1.0",
     "@commitlint/config-conventional": "^20.0.0",
+    "@eslint/js": "^9.39.2",
+    "eslint": "^9.39.2",
+    "eslint-config-prettier": "^10.1.8",
+    "globals": "^16.5.0",
     "lint-staged": "^16.2.7",
-    "prettier": "^3.7.4"
+    "prettier": "^3.7.4",
+    "typescript-eslint": "^8.50.1"
   },
   "lint-staged": {
     "**/*.{ts,tsx,js,css,json,md}": [
