--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,5 +53,34 @@ jobs:
         with:
           jwt_secret: ${{ secrets.JWT_SECRET }}
 
-      - name: Build
-        run: make test
+      - name: Test coverage
+        run: make test-coverage
+
+        # Extract lines percentage
+      - name: Get coverage percentage for users
+        id: coverage
+        shell: bash
+        run: |
+          SUMMARY_FILE="srcs/users/coverage/coverage-summary.json"
+          
+          if [ -f "$SUMMARY_FILE" ]; then
+            PCT=$(jq -r '.total.lines.pct' $SUMMARY_FILE)
+            echo "Users Coverage: $PCT%"
+            echo "UM_COVERAGE=$PCT" >> $GITHUB_ENV
+          else
+            echo "❌ Error: Coverage file not found at $SUMMARY_FILE"
+            exit 1
+          fi
+      
+      - name: Update coverage badge
+        uses: Schneegans/dynamic-badges-action@v1.7.0
+        with:
+          auth: ${{ secrets.GIST_SECRET }}
+          gistID: ${{ secrets.GIST_ID }}
+          filename: coverage-users.json
+          label: User service test coverage
+          message: ${{ env.UM_COVERAGE }}%
+          valColorRange: ${{ env.UM_COVERAGE }}
+          maxColorRange: 100
+          minColorRange: 50
+          namedLogo: vitest
