--- a/srcs/users/package.json
+++ b/srcs/users/package.json
@@ -12,20 +12,17 @@
     "start": "node dist/index.js",
     "preview": "vite preview",
     "pretest": "prisma generate",
-    "test": "npx vitest run",
-    "test:watch": "npx vitest run --watch",
-    "test:coverage": "npx vitest run --coverage",
-    "test:ui": "npx vitest --ui"
+    "test": "vitest run",
+    "test:watch": "vitest run --watch",
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^24.10.1",
-    "@vitest/coverage-v8": "^4.0.16",
-    "@vitest/ui": "^4.0.16",
     "prisma": "^7.0.1",
     "typescript": "^5.9.3",
-    "vite": "^7.3.0",
-    "vitest": "^4.0.16"
+    "vite": "^7.3.0"
   },
   "dependencies": {
     "@fastify/http-proxy": "11.4.1",
