--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,6 +56,9 @@ jobs:
       - name: Build Core
         run: make build-core
 
+      - name: Build Users
+        run: make build-user
+
       - name: Test coverage
         run: make test-coverage
 
