--- a/srcs/users/tsconfig.build.json
+++ b/srcs/users/tsconfig.build.json
@@ -13,8 +13,7 @@
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
     "sourceMap": true,
-    "lib": ["es2022"],
-    "types": ["node"]
+    "lib": ["es2022"]
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "test"]
