--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,6 +44,9 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
+    env:
+        NODE_ENV: development
+        NPM_CONFIG_PRODUCTION: false
 
     steps:
       - uses: actions/checkout@v4
