--- a/srcs/users/package.json
+++ b/srcs/users/package.json
@@ -35,14 +35,15 @@
   "dependencies": {
     "@fastify/http-proxy": "11.4.1",
     "@fastify/swagger": "^9.6.1",
-    "@scalar/fastify-api-reference": "^1.40.9",
     "@prisma/adapter-better-sqlite3": "^7.0.0",
     "@prisma/client": "^7.0.1",
-    "@transcendence/core": "1.0.0",
+    "@scalar/fastify-api-reference": "^1.40.9",
+    "@transcendence/core": "^1.1.0",
     "better-sqlite3": "^12.4.1",
     "dotenv": "^17.2.3",
     "envalid": "^8.1.1",
     "fastify": "^5.6.2",
+    "fastify-plugin": "^5.1.0",
     "fastify-type-provider-zod": "^6.1.0",
     "ioredis": "^5.8.2",
     "pino": "^10.1.0",
