--- a/srcs/blockchain/src/SmartContract/package.json
+++ b/srcs/blockchain/src/SmartContract/package.json
@@ -11,10 +11,10 @@
     "@nomicfoundation/hardhat-network-helpers": "^3.0.3",
     "@nomicfoundation/hardhat-toolbox-viem": "^5.0.1",
     "@nomicfoundation/hardhat-typechain": "^3.0.1",
-    "@types/chai": "^5.2.3",
     "@types/mocha": "^10.0.10",
     "@types/node": "^22.19.2",
-    "chai": "^5.3.3",
+    "chai": "^5.1.2",
+    "chai-as-promised": "^8.0.2",
     "ethers": "^6.16.0",
     "forge-std": "github:foundry-rs/forge-std#v1.11.0",
     "hardhat": "^3.0.17",
