--- a/srcs/gateway/package.json
+++ b/srcs/gateway/package.json
@@ -27,7 +27,7 @@
     "@fastify/swagger": "^9.6.1",
     "@fastify/swagger-ui": "^5.2.3",
     "@fastify/websocket": "^11.0.0",
-    "@transcendence/core": "1.1.0",
+    "@transcendence/core": "^1.1.0",
     "fastify": "^5.6.2",
     "fastify-type-provider-zod": "^6.1.0",
     "zod": "^4.2.1"
