fix(nginx): ajouter des en-têtes pour le pool de connexions keepalive

--- a/srcs/nginx/conf.d/default.conf
+++ b/srcs/nginx/conf.d/default.conf
@@ -57,6 +57,7 @@ server {
         proxy_set_header x-user-name "";
         proxy_set_header x-user-id "";
         proxy_set_header Upgrade "";
+        proxy_set_header Connection "";  # Nécessaire pour utiliser le pool keepalive
 
         proxy_pass_header Set-Cookie;
         proxy_cookie_path / /;
@@ -83,6 +84,7 @@ server {
         proxy_set_header x-user-name "";
         proxy_set_header x-user-id "";
         proxy_set_header Upgrade "";
+        proxy_set_header Connection "";  # Nécessaire pour utiliser le pool keepalive
 
         # Transmission des cookies
         proxy_pass_header Set-Cookie;
@@ -140,6 +142,7 @@ server {
         proxy_set_header x-user-name "";
         proxy_set_header x-user-id "";
         proxy_set_header Upgrade "";
+        proxy_set_header Connection "";  # Nécessaire pour utiliser le pool keepalive
 
         # Transmission des cookies
         proxy_pass_header Set-Cookie;
