fix(blck): bloc pb

--- a/srcs/blockchain/package.json
+++ b/srcs/blockchain/package.json
@@ -11,7 +11,7 @@
     "dotenv-cli": "^11.0.0",
     "nodemon": "^3.1.11",
     "postcss": "^8.5.6",
-    "prettier": "^3.6.2",
+    "prettier": "^3.7.4",
     "prettier-plugin-ejs": "^1.0.3",
     "supertest": "^7.1.4",
     "tailwindcss": "^4.1.18",
@@ -30,8 +30,9 @@
     "coverage": "vitest run --coverage",
     "dev:css": "tailwindcss -i ./src/public/input.css -o ./src/public/output.css --watch",
     "build:css": "tailwindcss -i ./src/public/input.css -o ./src/public/output.css --minify",
+    "dev:ts": "tsc -p tsconfig.json --watch",
     "dev:service": "nodemon",
-    "dev": "concurrently \"npm run dev:css\" \"npm run dev:service\"",
+    "dev": "concurrently \"npm run dev:css\" \"npm run dev:ts\" \"npm run dev:service\"",
     "dev:block": "dotenv -e .env.test.blockchain concurrently \"npm run dev:css\" \"nodemon\"",
     "build": "tsc -p tsconfig.json && npm run build:css",
     "start": "node dist/server.js"
@@ -46,6 +47,7 @@
     "better-sqlite3": "^12.4.1",
     "ejs": "^3.1.10",
     "ethers": "^6.16.0",
-    "fastify": "^5.6.2"
+    "fastify": "^5.6.2",
+    "ioredis": "^5.9.1"
   }
 }
