--- a/srcs/nginx/package.json
+++ b/srcs/nginx/package.json
@@ -34,8 +34,12 @@
   "dependencies": {
     "@transcendence/core": "1.1.0",
     "envalid": "^8.1.1",
+    "i18next": "^25.7.4",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-intervalplural-postprocessor": "^3.0.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-i18next": "^16.5.2",
     "react-router-dom": "^7.11.0",
     "zod": "^4.2.1"
   }
